# Retirement_Decumulator_Planner

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
data/: master_data.toml
docs/architecture/: data-storage-convention.md  input-file-convention.md  ledger-schema.md
docs/plan/: README.md  phase-0-architecture.md  phase-1-foundation.md  phase-2-tax.md  phase-3-optimizer.md  phase-4-outputs.md  phase-5-comparisons.md  phase-6-hardening.md  phase-approval-register.md  phase-gate-policy.md  validation-and-testing.md
scripts/: build_test_demo.sh
src/retirement_planner/: __init__.py  cli.py  config.py  inputs.py  ledger.py  planner.py  projection.py  tax.py  validator.py
src/retirement_planner/models/: __init__.py  accounts.py  assumptions.py  household.py  objectives.py  pension.py  person.py  residence.py  timeline.py
tests/: test_cli.py  test_inputs.py  test_phase0_architecture.py  test_planner.py  test_projection.py
