[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retirement-decumulator-planner"
version = "0.1.0"
description = "Starter retirement decumulation planning toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Retirement Planner Team" }
]
dependencies = []

[project.scripts]
retirement-planner = "retirement_planner.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
